# pnumi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
assets/: pnumi.icns
docs/: USER_GUIDE.md
scripts/: build_local_dist.sh  build_macos_app.sh  build_windows_app.ps1
src/pnumi/: __init__.py  __main__.py  currencies.py  engine.py  formatting.py  models.py  numi_import.py  rates.py  ui.py  units.py
tests/: test_engine.py  test_macos_icon.py  test_numi_import.py  test_rates.py  test_ui.py  test_user_guide.py  test_windows_build.py
