[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pnumi"
version = "0.2.0"
description = "A PySide6 Numi-style natural language calculator."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pnumi contributors" }]
dependencies = [
  "PySide6>=6.7,<7",
  "lark>=1.1,<2",
  "platformdirs>=4,<5",
  "python-dateutil>=2.9,<3",
  "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-qt>=4.4,<5",
  "pyinstaller>=6,<7",
  "ruff>=0.8,<1",
]

[project.scripts]
pnumi = "pnumi.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]
